# c-starter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build  build.bat  build.ps1  main.c
lib/: main.h
tests/: test_main.c
